[tool.poetry]
name = "testerman"
version = "0.1.0"
description = "Testerman package"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyasn1 = "^0.4.8"
pysnmp = "^4.4.12"
six = "^1.14.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
flake8 = "^3.7.9"
pylint = "^2.4.4"

[tool.poetry.scripts]
#flake8 = "flake8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
